--- a/a.html
+++ b/a.html
@@ -4,37 +4,29 @@
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <link rel="stylesheet" href="./css/normalize.css">
     <link rel="stylesheet" href="./a.css">
-
     <title>株式会社</title>
   </head>
   <body>
-    <div class="container">
-      <header class="header clearfix">
-        
-      </header>
-
-      <div class="wrapper clearfix">
-<h1>お問合せフォーム</h1>
-        <article class="content">
+    <h1>お問合せフォーム</h1>
           <form action="">
-              <table class="contact">
+              <table>
                 <tr>
                   <th>セイ</th>
-                <td><input type="text" class="text"></td>
+                  <td><input type="text"></td>
                   <th>メイ</th>
-                <td><input type="text" class="text"></td>
+                  <td><input type="text"></td>
                 </tr>
                 <tr>
                   <th>姓</th>
-                  <td><input type="text" class="text"></td>
-                <th>名</th>
-                <td><input type="text" class="text"></td>
+                  <td><input type="text"></td>
+                  <th>名</th>
+                  <td><input type="text"></td>
                 </tr>
                 <tr>
                   <th>メールアドレス</th>
-                  <td><input type="text"class="text"></td>
+                  <td><input type="text"></td>
                   <th>電話番号</th>
-                  <td><input type="text"class="text"></td>
+                  <td><input type="text"></td>
                 </tr>
                 <tr>
                   <th>性別</th>
@@ -43,16 +35,13 @@
                   </td>
                 <tr>
                   <th>お問合せ内容</th>
-                  <td><textarea name="contentarea"></textarea></td>
+                  <td><textarea></textarea></td>
                 </tr>
               </table>
             <div class="submit_button"><input type="submit" value="送信"></div>
           </form>
-        </article>
-      </div>
       <footer class="footer">
         <p>kaji&sui GROUP WORK</p>
       </footer>
-    </div>
   </body>
 </html>
