--- a/a.html
+++ b/a.html
@@ -2,46 +2,53 @@
 <html>
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <link rel="stylesheet" href="./css/normalize.css">
-    <link rel="stylesheet" href="./a.css">
-    <title>株式会社</title>
+    <link rel="stylesheet" href="./css/normalize.css" />
+    <link rel="stylesheet" href="./a.css" />
+        <title>株式会社</title>
   </head>
   <body>
     <h1>お問合せフォーム</h1>
-          <form action="">
-              <table>
-                <tr>
-                  <th>セイ</th>
-                  <td><input type="text"></td>
-                  <th>メイ</th>
-                  <td><input type="text"></td>
-                </tr>
-                <tr>
-                  <th>姓</th>
-                  <td><input type="text"></td>
-                  <th>名</th>
-                  <td><input type="text"></td>
-                </tr>
-                <tr>
-                  <th>メールアドレス</th>
-                  <td><input type="text"></td>
-                  <th>電話番号</th>
-                  <td><input type="text"></td>
-                </tr>
-                <tr>
-                  <th>性別</th>
-                  <td><input type="radio" name="sex" value="male">男
-                      <input type="radio" name="sex" value="female">女
-                  </td>
-                <tr>
-                  <th>お問合せ内容</th>
-                  <td><textarea></textarea></td>
-                </tr>
-              </table>
-            <div class="submit_button"><input type="submit" value="送信"></div>
-          </form>
-      <footer class="footer">
-        <p>kaji&sui GROUP WORK</p>
-      </footer>
+    <form action="">
+      <table>
+        <tr>
+          <th>セイ</th>
+          <td><input type="text" /></td>
+
+          <th>メイ</th>
+          <td><input type="text" /></td>
+        </tr>
+        <tr>
+          <th>姓</th>
+          <td><input type="text" /></td>
+          <th>名</th>
+          <td><input type="text" /></td>
+        </tr>
+        <tr>
+          <th>メールアドレス</th>
+          <td><input type="text" /></td>
+          <th>電話番号</th>
+          <td><input type="text" /></td>
+        </tr>
+        <tr>
+          <th>性別</th>
+          <td>
+            <input type="radio" name="sex" value="male" />男
+            <input type="radio" name="sex" value="female" />女
+          </td>
+        </tr>
+
+        <tr>
+          <th>お問合せ内容</th>
+          <td><textarea></textarea></td>
+        </tr>
+      </table>
+      <div class="submit_button"><input type="submit" value="送信" /></div>
+    </form>
+    <footer class="footer">
+      <p>kaji&sui GROUP WORK</p>
+    </footer>
+    <script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
+    <script type="text/javascript" src="a.js"></script>
+    <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
   </body>
 </html>
